--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <display-name>HRIS_Leave</display-name>
-  
   <servlet>
     <servlet-name>action</servlet-name>
     <servlet-class>org.apache.struts.action.ActionServlet</servlet-class>
@@ -15,16 +14,22 @@
     <servlet-name>action</servlet-name>
     <url-pattern>*.do</url-pattern>
   </servlet-mapping>
-  
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
-  
   <session-config>
-	<session-timeout>30</session-timeout>
+    <session-timeout>30</session-timeout>
   </session-config>
-  
   <listener>
     <listener-class>com.hris.leave.listener.LeaveSessionListener</listener-class>
   </listener>
+  <filter>
+    <display-name>LeaveFilter</display-name>
+    <filter-name>LeaveFilter</filter-name>
+    <filter-class>com.hris.leave.filter.LeaveFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>LeaveFilter</filter-name>
+    <url-pattern>/LeaveFilter</url-pattern>
+  </filter-mapping>
 </web-app>
