--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -30,6 +30,6 @@
   </filter>
   <filter-mapping>
     <filter-name>LeaveFilter</filter-name>
-    <url-pattern>/LeaveFilter</url-pattern>
+    <url-pattern>/*</url-pattern>
   </filter-mapping>
 </web-app>
